--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,16 +167,44 @@ body {
     margin: auto;
     background-color: #999;
 }
+.leftside {
+    width: 753px;
+    min-height: 200px;
+    float: left;
+    background-color: #999; 
+}
 .rightside {
     width: 275px;
     min-height: 200px;
     float: right;
-    background-color: #999;
     margin-left: 12px;
 }
-.leftside {
-    width: 753px;
-    float: left;
-    background: #999;
-    min-height: 200px;
+.widget {
+    border: 1px solid #CCC;
+    background-color: #FFF;
+    margin-bottom: 10px;
+}
+.widget_titulo {
+    height: 30px;
+    line-height: 30px;
+    background-color: #DDD;
+    border-bottom: 1px solid #CCC;
+    padding-left: 5px;
+    font-size: 14px;
+}
+.widget_conteudo {
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+} 
+.noticia_item {
+    font-size: 14px;
+    margin: 0px 10px;
+    padding: 10px 0px;
+    text-align: left;
+    border-bottom: 1px solid #CCC;
+}
+.noticia_item a {
+    text-decoration: none;
+    color: #000;
 }
