--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,26 @@ body {
     font-family: Arial;
     font-size: 12px;
 }
+
 .topo {
     height: 30px;
     background-color: #303030;
     color: #fff;
 }
+
 .topoint {
     width: 100%;
     max-width: 1040px;
     height: 30px;
     margin: auto;
 }
+
 .topoleft {
     width: 50%;
     height: 30px;
     float: left;
 }
+
 .toporight {
     width: 50%;
     height: 28px;
@@ -26,11 +30,13 @@ body {
     color: white;
     margin-top: 2px;
 }
+
 .topoleft ul {
     margin: 0;
     padding: 0;
-    list-style: none;   
+    list-style: none;
 }
+
 .topoleft li {
     height: 30px;
     line-height: 30px;
@@ -38,31 +44,39 @@ body {
     margin-left: 8px;
     margin-right: 8px;
 }
+
 .topoleft li a {
     text-decoration: none;
     color: #fff;
 }
+
 .topoleft li a:hover {
     color: blue;
     text-transform: uppercase;
 }
+
 .topobusca {
     width: 110px;
     height: 26px;
     outline: 0;
 }
+
 .toporight a {
     float: right;
 }
+
 .toporight input {
     float: right;
 }
+
 .toporight img {
     margin-right: 4px;
 }
+
 .topo2 {
     height: 95px;
 }
+
 .topo2int {
     width: 100%;
     max-width: 1040px;
@@ -76,6 +90,7 @@ body {
     float: left;
     margin-top: 5px;
 }
+
 .topo2 .banner {
     width: 650px;
     height: 80px;
@@ -83,16 +98,19 @@ body {
     margin-top: 7px;
     background-color: #c80203;
 }
+
 .menu {
     height: 40px;
     background-color: #d50000;
 }
+
 .menuint {
     width: 100%;
     max-width: 1040px;
     height: 40px;
     margin: auto;
 }
+
 .menu ul {
     margin: 0;
     padding: 0;
@@ -106,37 +124,46 @@ body {
     padding-left: 8px;
     padding-right: 8px;
 }
+
 .menu li:hover .submenu {
     display: block;
 }
+
 .menu a {
     text-decoration: none;
     color: #fff;
 }
+
 .submenu {
     width: 150px;
     background-color: #d50000;
     position: absolute;
     display: none;
 }
+
 .submenuitem {
     width: 140px;
     height: 30px;
     line-height: 30px;
     padding-left: 10px;
 }
+
 .submenuitem:hover {
     background-color: #ff5555
 }
+
 .ultimasnoticias {
     height: 40px;
 }
+
 .ultimasnoticiasint {
     width: 100%;
     max-width: 1040px;
-    height: 40px;;
+    height: 40px;
+    ;
     margin: auto;
 }
+
 .ultnoticiasarea {
     height: 28px;
     background-color: #fff;
@@ -144,6 +171,7 @@ body {
     margin-top: 10px;
     margin-top: 10px;
 }
+
 .ultnoticiastitulo {
     background-color: #e40b1c;
     color: #FFF;
@@ -154,6 +182,7 @@ body {
     padding-right: 10px;
     font-size: 16px;
 }
+
 .ultnoticiasnoticia {
     color: #000;
     height: 28px;
@@ -161,27 +190,32 @@ body {
     display: inline-block;
     padding-left: 5px;
 }
+
 .containerint {
     width: 100%;
     max-width: 1040px;
     margin: auto;
     background-color: #999;
 }
+
 .leftside {
     width: 753px;
     float: left;
 }
+
 .rightside {
     width: 275px;
     min-height: 200px;
     float: right;
     margin-left: 12px;
 }
+
 .widget {
     border: 1px solid #CCC;
     background-color: #FFF;
     margin-bottom: 10px;
 }
+
 .widget_titulo {
     height: 30px;
     line-height: 30px;
@@ -190,11 +224,13 @@ body {
     padding-left: 5px;
     font-size: 14px;
 }
+
 .widget_conteudo {
     text-align: center;
     padding-top: 5px;
     padding-bottom: 5px;
-} 
+}
+
 .noticia_item {
     font-size: 14px;
     margin: 0px 10px;
@@ -202,23 +238,66 @@ body {
     text-align: left;
     border-bottom: 1px solid #CCC;
 }
+
 .noticia_item a {
     text-decoration: none;
     color: #000;
 }
+
 .slideshow {
     height: 335px;
     background-color: #999;
-    overflow: hidden; /*Oculta o conteúdo ao passar da área*/
+    overflow: hidden;
+    /*Oculta o conteúdo ao passar da área*/
 }
+
 .slideshowarea {
+    width: 100000px;
     height: 335px;
-    background-color:#000; 
+    background-color: #000;
+    transition: all 1s;
 }
+
 .slide {
     height: 335px;
     float: left;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+.slideinfo {
+    height: 70px;
+    background-image: url("../images/slideshow_bg.png");
+    background-size: auto 70px;
+    margin-top: 265px;
+}
+
+.slideinfo_titulo {
+    font-size: 20px;
+    color: #FFF;
+    padding-top: 15px;
+    padding-left: 20px;
+}
+
+.slideinfo_subtitulo {
+    font-size: 13px;
+    color: #FFF;
+    padding-left: 20px;
+}
+
+.slidebolinhas {
+    position: absolute;
+    width: 200px;
+    height: 20px;
+}
+
+.bolinha {
+    width: 20px;
+    height: 20px;
+    float: left;
+    margin-right: 5px;
+    cursor: pointer;
+    background-color: #ccc;
+    border-radius: 10px;
 }
