--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,6 @@ body {
     width: 100%;
     max-width: 1040px;
     height: 40px;
-    ;
     margin: auto;
 }
 
@@ -248,7 +247,7 @@ body {
     height: 335px;
     background-color: #999;
     overflow: hidden;
-    /*Oculta o conteúdo ao passar da área*/
+    margin-bottom: 20px;
 }
 
 .slideshowarea {
@@ -301,3 +300,82 @@ body {
     background-color: #ccc;
     border-radius: 10px;
 }
+
+.noticiaarea1 {
+    width: 430px;
+    height: 420px;
+    float: left;
+}
+
+.noticiaarea2 {
+    width: 320px;
+    height: 420px;
+    float: left;
+}
+
+.noticiaitem {
+    text-align: left;
+    height: 88px;
+    margin-top: 7px;
+    margin-top: 7px;
+}
+
+.noticiaimg {
+    width: 80px;
+    height: 80px;
+    border: 1px solid #CCC;
+    padding: 3px;
+    float: left;
+}
+
+.noticiatitulo {
+    width: 226px;
+    float: left;
+    margin-left: 6px;
+    font-size: 16px;
+    color: #000;
+}
+
+.noticiainfo {
+    font-size: 12px;
+    margin-left: 6px;
+    color: #999;
+    float: left;
+}
+
+.noticiabig {
+    margin-left: 10px;
+}
+
+.noticiabig .noticiaimg {
+    width: 384px;
+    height: 222px;
+}
+
+.noticiabig .noticiaimg img {
+    width: 384px;
+    height: 222px;
+}
+
+.noticiabig .noticiatitulo {
+    width: 384px;
+    font-size: 30px;
+}
+
+
+/*
+@media only screen and (max-width:1057px) {
+    .topoint,
+    .topo2int,
+    .menuint,
+    .ultimasnoticiasint,
+    .containerint {
+        max-width: 890px;
+    }
+    .leftside {
+        width: 600px;
+    }
+    .ultnoticiasarea {
+
+    }
+}*/
